--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,9 +1,10 @@
 name: GitHub Actions Demo
-on:
-  push:
-    branches: [master]
-  pull_request:
-    branches: [master]
+on: [push]
+# on:
+#   push:
+#     branches: [master]
+#   pull_request:
+#     branches: [master]
 jobs:
   init:
     runs-on: ubuntu-latest
