--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/native-stack": "^6.9.8",
+    "@reduxjs/toolkit": "^1.9.1",
     "@rnmapbox/maps": "github:rnmapbox/maps#main",
     "@types/react": "~18.0.24",
     "@types/react-native": "~0.70.6",
@@ -38,11 +39,14 @@
     "react-native-svg": "^13.4.0",
     "react-native-web": "~0.18.7",
     "react-navigation": "^4.4.4",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.0",
     "typescript": "^4.6.3",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "@redux-devtools/core": "^3.13.1"
   },
   "private": true
 }
