--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@eva-design/eva": "^2.1.1",
+    "@expo/webpack-config": "^0.17.2",
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/native-stack": "^6.9.8",
@@ -32,14 +33,16 @@
     "firebase": "^9.16.0",
     "pg": "^8.8.0",
     "react": "18.1.0",
+    "react-dom": "18.1.0",
     "react-native": "0.70.5",
     "react-native-get-random-values": "^1.8.0",
-    "react-native-safe-area-context": "^4.4.1",
+    "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
-    "react-native-svg": "^13.4.0",
-    "react-native-web": "~0.18.7",
+    "react-native-svg": "13.4.0",
+    "react-native-web": "~0.18.9",
     "react-navigation": "^4.4.4",
     "react-redux": "^8.0.5",
+    "react-scripts": "^5.0.1",
     "redux": "^4.2.0",
     "typescript": "^4.6.3",
     "uuid": "^9.0.0"
