--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
   },
   "dependencies": {
     "@eva-design/eva": "^2.1.1",
+    "@expo/vector-icons": "^13.0.0",
     "@expo/webpack-config": "^0.17.2",
     "@react-native-async-storage/async-storage": "~1.17.3",
-    "@react-navigation/native": "^6.1.2",
+    "@react-navigation/bottom-tabs": "^6.5.4",
+    "@react-navigation/native": "^6.1.3",
     "@react-navigation/native-stack": "^6.9.8",
+    "@react-navigation/stack": "^6.3.12",
     "@reduxjs/toolkit": "^1.9.1",
     "@rnmapbox/maps": "github:rnmapbox/maps#main",
     "@types/react": "~18.0.24",
@@ -35,10 +38,12 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-calendars": "^1.1293.0",
     "react-native-get-random-values": "^1.8.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
-    "react-native-svg": "13.4.0",
+    "react-native-svg": "^13.8.0",
+    "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.9",
     "react-navigation": "^4.4.4",
     "react-redux": "^8.0.5",
