--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/react": "~18.0.24",
     "@types/react-native": "~0.70.6",
     "@ui-kitten/components": "^5.1.2",
+    "@ui-kitten/date-fns": "^5.1.2",
     "@ui-kitten/eva-icons": "^5.1.2",
     "expo": "~47.0.12",
     "expo-status-bar": "~1.4.2",
